fixed extra space with no media

--- a/css/press-this.css
+++ b/css/press-this.css
@@ -918,7 +918,8 @@ body:before {
 }
 
 .no-media {
-  padding: 10px 0;
+  margin: 0;
+  border: 0;
 }
 .no-media #wppt_no_image {
   display: none;
