--- a/scss/views/_main.scss
+++ b/scss/views/_main.scss
@@ -243,7 +243,8 @@ body {
 	}
 }
 .no-media {
-	padding: 10px 0;
+	margin: 0;
+	border: 0;
 
 	#wppt_no_image {
 		display: none;
